--- a/myapp/webapp/src/main/webapp/WEB-INF/isis.properties
+++ b/myapp/webapp/src/main/webapp/WEB-INF/isis.properties
@@ -27,6 +27,8 @@ isis.appManifest=domainapp.application.manifest.DomainAppAppManifest
 #isis.appManifest=domainapp.application.manifest.DomainAppAppManifestBypassSecurity
 #isis.appManifest=domainapp.application.manifest.DomainAppAppManifestWithFixtures
 
+isis.reflector.facets.include=\
+                org.isisaddons.metamodel.paraname8.NamedFacetOnParameterParaname8Factory
 
 
 #
