Moved rides out of Car to mixin

--- a/myapp/webapp/pom.xml
+++ b/myapp/webapp/pom.xml
@@ -34,7 +34,7 @@
 
     <properties>
 
-        <isis-maven-plugin.swagger.appManifest>domainapp.application.manifest.DomainAppAppManifest</isis-maven-plugin.swagger.appManifest>
+        <isis-maven-plugin.swagger.appManifest>domainapp.application.manifest.RitaAppManifest</isis-maven-plugin.swagger.appManifest>
         <isis-maven-plugin.swagger.dependency.groupId>${project.groupId}</isis-maven-plugin.swagger.dependency.groupId>
         <isis-maven-plugin.swagger.dependency.artifactId>${project.parent.artifactId}-application</isis-maven-plugin.swagger.dependency.artifactId>
 
