--- a/myapp/webapp/src/main/webapp/WEB-INF/isis.properties
+++ b/myapp/webapp/src/main/webapp/WEB-INF/isis.properties
@@ -23,11 +23,8 @@
 # this application.
 #
 
-isis.appManifest=domainapp.application.manifest.DomainAppAppManifest
-#isis.appManifest=domainapp.application.manifest.DomainAppAppManifestBypassSecurity
-#isis.appManifest=domainapp.application.manifest.DomainAppAppManifestWithFixtures
-
-isis.reflector.facets.include=\
+isis.appManifest=domainapp.application.manifest.RitaAppManifest
+#isis.appManifest=domainapp.application.manifest.RitaAppManifestBypassSecuritys.appManifest=domainapp.application.manifest.RitaAppManifestWithFixturess.reflector.facets.include=\
                 org.isisaddons.metamodel.paraname8.NamedFacetOnParameterParaname8Factory
 
 
