angular app for easy access, to do: add expenses

--- a/myapp/webapp/src/main/webapp/WEB-INF/isis.properties
+++ b/myapp/webapp/src/main/webapp/WEB-INF/isis.properties
@@ -24,7 +24,7 @@
 #
 
 isis.appManifest=domainapp.application.manifest.RitaAppManifest
-#isis.appManifest=domainapp.application.manifest.RitaAppManifestBypassSecuritys.appManifest=domainapp.application.manifest.RitaAppManifestWithFixturess.reflector.facets.include=\
+isis.reflector.facets.include=\
                 org.isisaddons.metamodel.paraname8.NamedFacetOnParameterParaname8Factory
 
 
