--- a/myapp/webapp/src/main/webapp/WEB-INF/isis.properties
+++ b/myapp/webapp/src/main/webapp/WEB-INF/isis.properties
@@ -33,3 +33,4 @@ isis.reflector.facets.include=\
 # (they are unlikely to vary between dev/test/prod so can be "baked in")
 #
 
+isis.persistor.datanucleus.impl.datanucleus.schema.autoCreateTables=true
