--- a/myapp/webapp/src/main/webapp/WEB-INF/persistor.properties
+++ b/myapp/webapp/src/main/webapp/WEB-INF/persistor.properties
@@ -72,10 +72,10 @@
 #
 # PostgreSQL Server 
 #
-#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionDriverName=org.postgresql.Driver
-#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionURL=jdbc:postgresql://localhost:5432/isis
-#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionUserName=isis
-#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionPassword=isis
+isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionDriverName=org.postgresql.Driver
+isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionURL=jdbc:postgresql://localhost:5432/isis
+isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionUserName=isis
+isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionPassword=isis
 
 #
 # PostgreSQL Server (using log4jdbc-remix)
